fix(toaster) add z-index to render on the top

--- a/packages/Toaster/src/toaster.scss
+++ b/packages/Toaster/src/toaster.scss
@@ -7,8 +7,7 @@
   --ids-toaster-font-size: var(--font-size-5);
   --ids-toaster-font-weight: var(--font-weight-bold);
   --ids-toaster-text: var(--grey-800);
-  --ids-toaster-padding:
-    var(--space-3) var(--space-2) var(--space-3)
+  --ids-toaster-padding: var(--space-3) var(--space-2) var(--space-3)
     calc(var(--space-3) + var(--ids-toaster-status-width));
   --ids-toaster-gap: var(--space-3);
   --ids-toaster-max-width: 60rem;
@@ -28,6 +27,7 @@
 
   /* Overlay */
   --ids-toaster-overlay-padding: 0 var(--space-3);
+  --ids-toaster-z-index: var(--z-index-max);
 }
 
 .ids-toaster__overlay {
@@ -38,6 +38,7 @@
   flex-direction: column;
   align-items: center;
   gap: var(--ids-toaster-gap);
+  z-index: var(--ids-toaster-z-index);
 }
 
 .ids-toaster {
